# ember-trove

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  QWEN.md  README.md  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
api/: Cargo.toml
api/src/: backup.rs  config.rs  error.rs  main.rs  state.rs  tests.rs  webhook_dispatch.rs  wikilink.rs
api/src/admin/: cognito.rs  keycloak.rs  mod.rs
api/src/auth/: middleware.rs  mod.rs  oidc.rs  permissions.rs
api/src/notify/: mod.rs
api/src/object_store/: mod.rs  s3.rs
api/src/repo/: activity.rs  attachment.rs  backup.rs  edge.rs  favorite.rs  graph.rs  mod.rs  node.rs  node_link.rs  node_version.rs  note.rs  permission.rs  pkce.rs  search.rs  search_presets.rs  share_token.rs  tag.rs  task.rs  template.rs  webhook.rs
api/src/routes/: admin.rs  attachments.rs  auth.rs  backup.rs  edges.rs  export.rs  favorites.rs  graph.rs  inbox.rs  metrics.rs  mod.rs  node_links.rs  nodes.rs  notes.rs  permissions.rs  search.rs  search_presets.rs  share.rs  tags.rs  tasks.rs  templates.rs  webhooks.rs
common/: Cargo.toml
common/src/: activity.rs  admin.rs  attachment.rs  auth.rs  backup.rs  edge.rs  error.rs  favorite.rs  graph.rs  id.rs  inbox.rs  lib.rs  markdown.rs  node.rs  node_link.rs  node_version.rs  note.rs  permission.rs  search.rs  share_token.rs  slug.rs  tag.rs  task.rs  template.rs  webhook.rs
deploy/: .env.local.example  .env.prod.template  Dockerfile.api  Dockerfile.ui  backup.sh  cognito.css  docker-compose.prod.yml  docker-compose.yml  keycloak-realm.json  nginx.conf  nginx.prod.conf
deploy/k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  minio.yaml  namespace.yaml  postgres.yaml  secrets.yaml  ui-deployment.yaml
deploy/keycloak-theme/ember-trove/login/: theme.properties
deploy/keycloak-theme/ember-trove/login/resources/css/: login.css
docs/: deploy-aws.md
migrations/: 001_initial.sql  002_node_positions.sql  003_wikilink_edge_type.sql  004_tasks.sql  005_tasks_fix_owner_id.sql  006_notes.sql  007_search_notes_tasks.sql  008_backup_jobs.sql  009_favorites.sql  010_notes_updated_at.sql  011_backfill_owner_permissions.sql  012_share_tokens.sql  013_activity_log.sql  014_node_versions.sql  015_templates.sql  016_node_pinning.sql  017_search_presets.sql  018_node_links.sql  019_note_color.sql  020_template_defaults.sql  021_nodes_owner_id_index.sql  022_task_recurrence_sort.sql  023_task_node_id_nullable.sql  024_nodes_title_unique.sql  025_webhooks.sql  026_backup_comment.sql  027_pkce_verifiers.sql  028_note_node_id_nullable.sql
scripts/: next-version.sh  verify.sh
ui/: Cargo.toml  Trunk.toml  index.html  input.css
ui/public/: manifest.json  sw.js
ui/src/: api.rs  app.rs  auth.rs  error.rs  focus_note.rs  focus_task.rs  main.rs  markdown.rs  recent.rs  templates.rs  wikilink.rs
ui/src/api/: activity.rs  admin.rs  attachments.rs  auth.rs  backup.rs  edges.rs  favorites.rs  graph.rs  inbox.rs  mod.rs  node_links.rs  nodes.rs  notes.rs  permissions.rs  search.rs  share.rs  tags.rs  tasks.rs  templates.rs  versions.rs
ui/src/components/: activity_panel.rs  admin_view.rs  attachment_panel.rs  backup_view.rs  bulk_permissions_view.rs  calendar_view.rs  carryover.rs  change_password_modal.rs  dark_mode_toggle.rs  favorites_section.rs  format_helpers.rs  graph_view.rs  icon_button.rs  inbox_view.rs  layout.rs  links_panel.rs  mod.rs  my_day_view.rs  node_editor.rs  node_list.rs  node_meta.rs  node_view.rs  note_panel.rs  notes_view.rs  permission_dialog.rs  plan_view.rs  project_dashboard.rs  public_share_view.rs  search_bar.rs  search_view.rs  share_panel.rs  sidebar.rs  skeleton.rs  tag_bar.rs  tag_manager.rs  task_common.rs  task_panel.rs  task_row.rs  tasks_view.rs  templates_view.rs  (+2 more)
ui/src/components/modals/: add_favorite.rs  command_palette.rs  create_node.rs  delete_confirm.rs  fast_capture.rs  help.rs  link_picker.rs  mod.rs  shortcuts.rs
