[package]
name       = "api"
version    = "1.0.0"
edition    = "2021"
repository = "https://github.com/jchultarsky101/ember-trove"

[dependencies]
common             = { path = "../common" }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
bytes              = { workspace = true }
async-trait        = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
utoipa             = { workspace = true, features = ["uuid", "chrono"] }
utoipa-swagger-ui  = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
garde              = { workspace = true }
jsonwebtoken       = { workspace = true }
reqwest            = { workspace = true }
axum-extra         = { workspace = true }
urlencoding        = { workspace = true }
hex                = { workspace = true }

# S3-compatible object storage (MinIO / AWS S3)
aws-sdk-s3 = "1"

sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
