[package]
name       = "api"
version = "2.3.2"
edition    = "2024"
repository = "https://github.com/jchultarsky101/ember-trove"

[dependencies]
common             = { path = "../common" }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
bytes              = { workspace = true }
async-trait        = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
tower_governor     = { workspace = true }
utoipa             = { workspace = true, features = ["uuid", "chrono"] }
utoipa-swagger-ui  = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
garde              = { workspace = true }
jsonwebtoken       = { workspace = true }
reqwest            = { workspace = true }
axum-extra         = { workspace = true }
urlencoding        = { workspace = true }
hex                = { workspace = true }
hmac               = { workspace = true }
rand               = { workspace = true }
sha2               = { workspace = true }
base64             = { workspace = true }

# AWS SDKs — S3 object storage + Cognito user management + SES email
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-sesv2 = "1"

# Backup archive (tar + gzip) and ZIP export
tar    = "0.4"
flate2 = "1"
zip    = "3"

sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

[dev-dependencies]
tower          = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
