[package]
name    = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
garde      = { workspace = true }
utoipa     = { workspace = true, features = ["uuid", "chrono"] }
uuid       = { workspace = true }
chrono     = { workspace = true }
