[package]
name    = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
common      = { path = "../common" }
leptos      = { version = "0.8.16", features = ["csr"] }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-web = "0.1"
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
gloo-net    = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "Storage",
    "Window",
] }
js-sys = "0.3"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
ammonia = "3"
# uuid needs its `js` feature to use crypto.getRandomValues on WASM
uuid = { workspace = true, features = ["js"] }
